# docs/swagger.json
@@ -6,8 +6,10 @@
         "contact": {},
         "version": "0.0.1"
     },
+    "host": "127.0.0.1:3000",
+    "basePath": "/api/v1",
     "paths": {
-        "/api/v1/hello": {
+        "/hello": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -22,7 +24,7 @@
                 "responses": {}
             }
         },
-        "/api/v1/user/login": {
+        "/user/login": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -55,7 +57,7 @@
                 }
             }
         },
-        "/api/v1/user/register": {
+        "/user/register": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -156,7 +158,7 @@
         }
     },
     "securityDefinitions": {
-        "ApiKeyAuth": {
+        "Bearer": {
             "type": "apiKey",
             "name": "Authorization",
             "in": "header"
